Fixed carousel next/prev buttons visibility

--- a/sites/all/modules/ting_search_carousel/sass/ting_search_carousel.scss
+++ b/sites/all/modules/ting_search_carousel/sass/ting_search_carousel.scss
@@ -40,11 +40,6 @@ $tabs-background-color:         #fff;
 $tabs-active-background-color:  #000;
 $tabs-active-text-color:        #fff;
 
-.ui-state-disabled {
-  @include opacity(1);
-}
-
-
 /* Previous and next buttons
    ========================================================================== */
 .es-nav-prev,
@@ -69,11 +64,11 @@ $tabs-active-text-color:        #fff;
 
 .es-nav-prev {
   background-position: 0 0;
+  left: $default-spacing;
   &:hover {
     background-position: 0 -36px;
   }
 }
-
 
 .carousel-action-disabled {
   @include opacity(.25);
@@ -141,9 +136,7 @@ $tabs-active-text-color:        #fff;
 }
 
 .carousel-tabs ul li {
-  border-top: 1px solid lighten(#000, 80%);
-  border-right: 1px solid lighten(#000, 80%);
-  border-bottom: 1px solid lighten(#000, 80%);
+  border: 1px solid lighten(#000, 80%);
   display: table-cell;
   min-width: 10%; /* Appearantly this make them have equal width in Firefox */
   vertical-align: top;
