--- a/sites/all/themes/ebog/css/regions.css
+++ b/sites/all/themes/ebog/css/regions.css
@@ -49,7 +49,7 @@
 
 
 #header-regions {
-  height: 228px;
+  height: 229px;
   padding-top: 25px;
 }
 
